--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="com.edu.geocontinentes">
 
     <uses-feature
-        android:glEsVersion="0x00020000" android:required="true" />
+        android:glEsVersion="0x00020000"
+        android:required="true" />
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -12,18 +13,23 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:configChanges="orientation"
+        android:screenOrientation="landscape"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SplashScreen_Activity" android:theme="@style/SplashScreenTheme">
+        <activity android:name=".SubmenuAsia"></activity>
+        <activity
+            android:name=".SplashScreen_Activity"
+            android:theme="@style/SplashScreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".MainActivity"  android:theme="@style/SplashScreenTheme">
-
-        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/SplashScreenTheme"></activity>
 
         <meta-data
             android:name="preloaded_fonts"
