--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,15 @@
 
     <application
         android:allowBackup="true"
+        android:configChanges="orientation"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:configChanges="orientation"
         android:screenOrientation="landscape"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SubmenuAsia"></activity>
+        <activity android:name=".fragments.submenuNorthAmeric"></activity>
+        <activity android:name=".SubmenuAsia" />
         <activity
             android:name=".SplashScreen_Activity"
             android:theme="@style/SplashScreenTheme">
@@ -29,7 +30,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:theme="@style/SplashScreenTheme"></activity>
+            android:theme="@style/SplashScreenTheme" />
 
         <meta-data
             android:name="preloaded_fonts"
